Stylized login page and signup page. (VPP)

--- a/src/components/Login/login.css
+++ b/src/components/Login/login.css
@@ -8,7 +8,8 @@
     width: 60%;
     height: 70%;
     object-fit: cover;
-    margin: auto;
+    margin-left: 20%;
+    margin-top: 3%;
     top: 150px;
 }
 
@@ -18,19 +19,40 @@
 
 .loginCover{
     height: 320px;
+    margin-left: 18%;
+    margin-top: 7%;
     position: relative;
 }
 
 .headerFontColor{
     color: orangered;
+    margin-left: 15%;
 }
 
 .loginText{
-    color: white;
+    color: orangered;
+    margin-left: 12%;
+    margin-top: 12%;
 }
 
 .buttonColor{
     border-radius: 24px;
     background-color: #EB842B;
     color:black
+}
+
+.sideText{
+    color: #4b3572;
+    width: 12%;
+    margin-left: 4%;
+    margin-top: -33%;
+    /* position: absolute; */
+}
+
+.sideTextFooter{
+    color: #c7bb10;
+    width: 12%;
+    margin-left: 4%;
+    margin-top: 0%;
+    /* position: absolute; */
 }
