--- a/src/components/Signup/signup.css
+++ b/src/components/Signup/signup.css
@@ -1,3 +1,23 @@
+.signUpBackground{
+    background-size: cover;
+    background-color: #2B1134;
+}
+
+.signUpImg{
+    width: 40%;
+    height:30%;
+    margin-left: 30%;
+    padding-top: 5%;
+    padding-bottom: 10%;
+}
+
 .signup{
+    background-color: #99d851;
+    border-radius: 36px;
     color: black;
+    width: 50%;
+    margin-left: 25%;
+    padding-bottom: 4%;
+    padding-top: 4%;
+    padding-left: 11%;
 }
