Set up request for trade hall that retrieves all posts.  Does not yet function prior to page render.  Startedworking on modelResearch component. (VPP)

--- a/src/components/ModelResearch/modelResearch.css
+++ b/src/components/ModelResearch/modelResearch.css
@@ -1,4 +1,9 @@
-.homeLink{
-    position: relative;
-    top: 300px;
+.modelResearchBackground{
+    background-size: cover;
+    background-image: url("./ModelResearchBackground.jpg");
+}
+
+.header{
+    color: white;
+    padding-right: 25%;
 }
