--- a/src/components/TradeHall/tradeHall.css
+++ b/src/components/TradeHall/tradeHall.css
@@ -6,8 +6,8 @@
 .tradehallMainFeed{
     color: white;
     margin-top: 5%;
-    margin-left: 20%;
-    width: 60%;
+    margin-left: 15%;
+    width: 70%;
     height: 100%;
 }
 
@@ -15,13 +15,6 @@
     color: rgb(251, 255, 4);
     padding-left: 45%;
     padding-bottom: 4%;
-}
-
-.mainFeedRows{
-    background: red;
-    border-radius: 50px;
-    padding-left: 3%;
-    padding-bottom: 1%;
 }
 
 .tradehallHeader{
@@ -32,5 +25,12 @@
 }
 
 .trSpacer{
+    background: red;
+    padding-left: 3%;
     padding-bottom: 4%;
+    
+}
+
+.column{
+
 }
