--- a/src/components/Home/home.css
+++ b/src/components/Home/home.css
@@ -22,7 +22,7 @@
     margin-top: 5%;
     margin-left: 20%;
     width: 55%;
-    height: 1000px;
+    height: 700px;
 }
 
 .header{
@@ -32,6 +32,7 @@
 .eventPosition{
     background-color: gray;
     border: solid black;
+    border-radius: 24px;
     text-align: left;
     padding-left: 10%;
 }
@@ -46,3 +47,6 @@
     margin-left: 6%;
 }
 
+.footer{
+    margin-top: 0%;
+}
