aligned elements of the signup component and added a back button in the event that a user chooses not to make a new profile. (VPP)

--- a/src/components/Signup/signup.css
+++ b/src/components/Signup/signup.css
@@ -16,9 +16,15 @@
     flex-direction: row;
     border-radius: 36px;
     color: black;
-    width: 50%;
-    margin-left: 25%;
+    width: 40%;
+    margin-left: 30%;
     padding-bottom: 4%;
     padding-top: 4%;
     padding-left: 4%;
+    text-align: end;
+}
+
+.signupRows{
+    padding-right: 43%;
+    padding-bottom: 1%;
 }
