--- a/src/components/ModelResearch/modelResearch.css
+++ b/src/components/ModelResearch/modelResearch.css
@@ -47,12 +47,14 @@
     width: 100%;
     height: 5%;
     margin-left: 15%;
+    color: white;
 }
 
 .searchBarB{
     width: 20%;
     height: 5%;
     margin-left: 65%;
+    color: white;
 }
 
 .columnOne{
@@ -69,5 +71,13 @@
 
 .commentBar{
     margin-top: 2%;
+    color: white;
+}
+
+.modelA{
+    color: white;
+}
+
+.modelB{
     color: white;
 }
