--- a/src/components/TradeHall/tradeHall.css
+++ b/src/components/TradeHall/tradeHall.css
@@ -7,7 +7,7 @@
     color: white;
     padding-top: 5%;
     margin-left: 15%;
-    border-radius: 50%;
+    border-radius: 24px;
     width: 70%;
     height: 100%;
     
@@ -23,11 +23,14 @@
     color: rgb(251, 255, 4);
     padding-top: 3%;
     padding-left: 44%;
+}
 
+.tableBody{
+    border-radius: 24px;
 }
 
 .trSpacer{
-    background: red;
+    background: rgb(233, 45, 45);
     padding-left: 3%;
     padding-bottom: 4%;
 }
@@ -36,3 +39,18 @@
     padding-top: 23%;
 }
 
+.postOfferForm{
+    background-color: rgb(41, 8, 83);
+    border-radius: 24px;
+    color: white;
+    margin-left: 36%;
+    width: 25%;
+    height: 5%;
+    padding-left: 3%;
+}
+
+.buttonColor{
+    border-radius: 24px;
+    background-color: #EB842B;
+    color:black
+}
